--- a/sass/app/_global.scss
+++ b/sass/app/_global.scss
@@ -1,5 +1,6 @@
 html {
     background-color: tint($light-grey, 50%);
+    @include margin-trailer(2);
 }
 
 svg {
@@ -9,14 +10,15 @@ svg {
 [role="main"] {
     max-width: 60em;
     margin: 0 auto;
-    padding: ms(2);
-
+    padding: 0 ms(-2);
+    @include rhythm(0,1,.5,0);
     background-color: $white;
     @extend %clearfix;
     position: relative;
 
     @include breakpoint(32em) {
-        padding: ms(4);
+        padding: 0 ms(1);
+        @include rhythm(0,1,.5,0);
         border-radius: 5px;
 
     }
@@ -28,11 +30,10 @@ svg {
 
 main > p {
     max-width: 40em;
-    @include trailer(1);
 }
 
 [role="contentinfo"] {
-    font-size: ms(-1);
+    @include adjust-font-size-to(ms(-1));
     max-width: 77.2em;
     margin: 0 auto;
     padding: 0 ms(-2);
