--- a/sass/app/_cards.scss
+++ b/sass/app/_cards.scss
@@ -4,42 +4,42 @@
 
 .cards--baby > li {
     width: 100%;
-    font-size: ms(-1);
+    @include adjust-font-size-to(ms(-1));
     @include trailer(2);
 }
 
 .cards > li {
     @include breakpoint(40em) {
         &:nth-child(odd) {
-            // @include grid-span(1, 1, $grid: 2, $gutter: .1);
+            @include grid-span(1, 1, $grid: 2, $gutter: .1);
             clear: left;
         }
 
         &:nth-child(even) {
-            // @include grid-span(1, 2, $grid: 2, $gutter: .1);
+            @include grid-span(1, 2, $grid: 2, $gutter: .1);
             clear:right;
         }
     }
 
     @include breakpoint(60em) {
         &:nth-child(3n+1) {
-            // @include grid-span(1, 1, $grid: 3, $gutter: .1);
+            @include grid-span(1, 1, $grid: 3, $gutter: .1);
             clear: left;
         }
 
         &:nth-child(3n+2) {
-            // @include grid-span(1, 2, $grid: 3, $gutter: .1);
+            @include grid-span(1, 2, $grid: 3, $gutter: .1);
         }
 
         &:nth-child(3n+3) {
-            // @include grid-span(1, 3, $grid: 3, $gutter: .1);
+            @include grid-span(1, 3, $grid: 3, $gutter: .1);
             clear: right;
         }
     }
 }
 
 .card, .card--baby {
-    @include padding-x(ms(-1));
+    @include padding-x(msem(-1));
     @include rhythm(0,.25,0,1);
     box-shadow: 0 0 0 8px $light-grey;
     position: relative;
@@ -48,8 +48,8 @@
 .card__header {
     background-color: $light-grey;
     margin: -.375em -.77778em 0 -.77778em;
-    @include padding-x(ms(-1));
-    padding-bottom: ms(-3);
+    @include padding-x(msem(-1));
+    padding-bottom: msem(-3);
 }
 
 .card__details {
