--- a/sass/app/_dash-box.scss
+++ b/sass/app/_dash-box.scss
@@ -10,22 +10,22 @@
 }
 
 .dash-box, .flex-box {
-    // @include border-radius(5px);
+    @include border-radius(5px);
     @include leader();
-    @include padding-x(ms(5));
-    padding-top: ms(1);
+    @include padding-x(msem(5));
+    padding-top: msem(1);
     background-color: #fff;
 }
 
 .dash-box {
     @include breakpoint(40em) {
         &:nth-child(odd) {
-            // @include grid-span(1,1, $grid: 2, $gutter: .08);
+            @include grid-span(1,1, $grid: 2, $gutter: .08);
             clear: left;
         }
 
         &:nth-child(even) {
-            // @include grid-span(1, 2, $grid: 2, $gutter: .08);
+            @include grid-span(1, 2, $grid: 2, $gutter: .08);
             clear: right;
         }
     }
@@ -42,7 +42,7 @@
 .flex-box {
     flex: 1;
     @include margin-x(0);
-    padding-bottom: ms(1);
+    padding-bottom: msem(1);
 
     @include breakpoint(40em) {
         &:nth-child(odd) {
