--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 
 // vendor bullshit
-// @import "../bower_components/compass-mixins/lib/_compass.scss";
+@import "../bower_components/compass-mixins/lib/_compass.scss";
 @import "../bower_components/modular-scale/stylesheets/modular-scale";
 @import "../bower_components/breakpoint-sass/stylesheets/breakpoint";
-// @import "../bower_components/singularitygs/stylesheets/_singularitygs.scss";
+@import "../bower_components/singularitygs/stylesheets/_singularitygs.scss";
 
 
 // Import your variables and Scales.
@@ -15,7 +15,7 @@
 // App bullshit
 @import "utilities/mixins";
 @import "utilities/misc";
-@import "utilities/fuck-compass";
+// @import "utilities/fuck-compass";
 
 @import "app/spacing";
 @import "app/grid";
