Clean up some button and table styles

--- a/templates/push/push.twig
+++ b/templates/push/push.twig
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-    <p><a class="btn--small btn--back" href="{{ urlFor('repository.status', {'id': push.repository.id}) }}">Back to Repository Status</a></p>
+    <p><a class="btn btn--small btn--back" href="{{ urlFor('repository.status', {'id': push.repository.id}) }}">Back to Repository Status</a></p>
 
     <h2>Push Information</h2>
 
