--- a/templates/partials/log-table.twig
+++ b/templates/partials/log-table.twig
@@ -1,6 +1,6 @@
 {% import "partials/macros.twig" as macros %}
 
-<table data-tablesaw-mode="stack">
+<table class="table--spacing-medium" data-tablesaw-mode="stack">
     <thead>
         <tr>
             <th class="t20">Event</th>
