Remove some ties to unnecessary doctrine relations

--- a/templates/delete.confirm.twig
+++ b/templates/delete.confirm.twig
@@ -10,7 +10,7 @@
         <p>You're about to permanently remove this entity. Do you want to continue?</p>
 
         <form class="form-inline" method="post">
-            <input class="btn--destructive" type="submit" value="Delete">
+            <input class="btn btn--destructive" type="submit" value="Delete">
         </form>
         <a href="javascript:history.go(-1)">Cancel</a>
     </div>
