--- a/sass/app/_kraken.scss
+++ b/sass/app/_kraken.scss
@@ -3,6 +3,7 @@
 .kraken-logo {
     background-image: url(/img/kraken.png);
     background-size: contain;
+    background-repeat: no-repeat;
 
     border: 2px solid rgba(0, 0, 0, 0.2);
     box-shadow: 0 15px 5px rgba(0, 0, 0, 0.3);
