--- a/sass/patterns/_buttons.scss
+++ b/sass/patterns/_buttons.scss
@@ -18,68 +18,33 @@
 .btn--small { font-size: ms(-2); }
 .btn--large { font-size: ms(3); }
 
-.btn--full {
-    display: block;
-    text-align: center;
-    // The following is so that .btn-full works properly on <input> as well as <a>.
-    padding-right: 0;
-    padding-left: 0;
-    width: 100%;
+@mixin btn-color($color) {
+    background-color: $color;
+    border: 1px solid shade($color, 20%);
+
+    box-shadow: 0 -1px 0 rgba(255, 255, 255, .1) inset, 0 4px 0 shade($color,20%), 0 4px 2px rgba(0, 0, 0, .5);
+
+    &:hover { background-color: tint($color, 15%); }
+    &:focus { color: shade($color, 20%); }
 }
 
 // Button types
 .btn--action {
-    background-color: $warning-color;
-    border: 1px solid shade($warning-color, 20%);
-    text-align: center;
-
-    box-shadow: 0 -1px 0 rgba(255, 255, 255, .1) inset, 0 4px 0 shade($warning-color,20%), 0 4px 2px rgba(0, 0, 0, .5);
-
-    &:hover { background-color: tint($warning-color, 15%); }
-    &:focus { color: shade($warning-color, 20%); }
+    @include btn-color($warning-color);
 }
 
 .btn--destructive {
-    background-color: $error-color;
-    border: 1px solid shade($error-color, 20%);
-    text-align: center;
-
-    box-shadow: 0 -1px 0 rgba(255, 255, 255, .1) inset, 0 4px 0 shade($error-color,20%), 0 4px 2px rgba(0, 0, 0, .5);
-
-    &:hover { background-color: tint($error-color, 15%); }
-    &:focus { color: shade($error-color, 20%); }
+    @include btn-color($error-color);
 }
 
 .btn--disabled {
-    background-color: $light-grey;
-    border: 1px solid shade($light-grey, 20%);
-    color: tint($grey, 30%);
-
-    box-shadow: 0 -1px 0 rgba(255, 255, 255, .1) inset, 0 4px 0 shade($light-grey,20%), 0 4px 2px rgba(0, 0, 0, .5);
-    pointer-events: none;
-
-    &:hover { background-color: tint($light-grey, 15%); }
-    &:focus { color: shade($light-grey, 20%); }
+    @include btn-color($light-grey);
 }
 
 .btn--selected {
-    background-color: $success-color;
-    border: 1px solid shade($success-color, 20%);
-    text-align: center;
-
-    box-shadow: 0 -1px 0 rgba(255, 255, 255, .1) inset, 0 4px 0 shade($success-color,20%), 0 4px 2px rgba(0, 0, 0, .5);
-
-    &:hover { background-color: tint($success-color, 15%); }
-    &:focus { color: shade($success-color, 20%); }
+    @include btn-color($success-color);
 }
 
 .btn--not-selected {
-    background-color: $grey;
-    border: 1px solid shade($grey, 20%);
-    text-align: center;
-
-    box-shadow: 0 -1px 0 rgba(255, 255, 255, .1) inset, 0 4px 0 shade($grey,20%), 0 4px 2px rgba(0, 0, 0, .5);
-
-    &:hover { background-color: tint($grey, 15%); }
-    &:focus { color: shade($grey, 20%); }
+    @include btn-color($grey);
 }
