--- a/sass/base/_headings.scss
+++ b/sass/base/_headings.scss
@@ -1,21 +1,35 @@
 // Spacing
-h1, h2, h3, h4, h5, h6 {
-    @include trailer;
-}
 
 // Page header
 h1 {
+    color: $hal-cyan;
     font-weight: bold;
+
+    @include leader(.25);
+    @include trailer(.75);
+
+    strong {
+        color: tint($hal-cyan, 50%);
+    }
 }
 
 // Section header
 h2 {
     color: $bright-blue;
+
+    @include leader(.5);
+    @include trailer(.5);
 }
 
 // Label header
 h4 {
-    margin: 0;
+    @include leader(.75);
+    @include trailer(0);
+}
+
+h3, h5, h6 {
+    @include leader(.75);
+    @include trailer(.25);
 }
 
 .header--sub {
