--- a/templates/kraken/environments.twig
+++ b/templates/kraken/environments.twig
@@ -4,10 +4,10 @@
 
 {% block content %}
     <a href="{{ urlFor('kraken') }}" class="btn" style="position:absolute; right:20px;top:20px !important;">back</a>
-    <h2>Environments</h2>
+    <h1>Environments</h1>
 
     {% if environments %}
-        <table>
+        <table class="table--spacing-medium">
             <thead>
                 <tr>
                     <th>ID</th>
