--- a/templates/kraken/application/status.twig
+++ b/templates/kraken/application/status.twig
@@ -6,18 +6,36 @@
 {% block content %}
 
     <a href="{{ urlFor('kraken.application', {id: application.id}) }}" class="btn" style="position:absolute; right:20px;top:20px !important;">back</a>
-    <h2>Configuration Status for <strong>{{ application.id }}</strong></h2>
+    <h1>Configuration Status for <strong>{{ application.id }}</strong></h1>
 
     <h4>Application</h4>
     <p>{{ application.id }}</p>
 
 
-    <h4>Environments</h4>
+    <h2>Environments</h2>
+
+    <ul class="list--bare cards">
     {% for encrypt in assigned_environments %}
-        <h4>{{ encrypt.environment.name }}</h4>
-        <p>
-            <a href="{{ urlFor('kraken.application.environment', {id: application.id, environment: encrypt.environment.id})}}">View Configuration for this environment</a>
-        </p>
+        <li>
+            <article class="card">
+                <header class="card__header">
+                    <h4>{{ encrypt.environment.name }}</h4>
+                    <a href="{{ urlFor('kraken.application.environment', {id: application.id, environment: encrypt.environment.id})}}">View Configuration</a>
+                </header>
+
+                <section class="card__details">
+                    <ul class="split">
+                        <li>
+                            <span class="split__title">Deployed on:</span> << timestamp >>
+                        </li>
+                        <li>
+                            <span class="split__title">Deployed Config:</span> << none >>
+                        </li>
+                    </ul>
+                </section>
+            </article>
+        </li>
     {% endfor %}
+    </ul>
 
 {% endblock %}
