--- a/templates/kraken/application/view-environment.twig
+++ b/templates/kraken/application/view-environment.twig
@@ -6,7 +6,7 @@
 {% block content %}
 
     <a href="{{ urlFor('kraken.application', {id: application.id}) }}" class="btn" style="position:absolute; right:20px;top:20px !important;">back</a>
-    <h2>Configuration for <strong>{{ environment.name }}</strong></h2>
+    <h1>Configuration for <strong>{{ environment.name }}</strong></h1>
 
     <h4>Application</h4>
     <p>{{ application.id }}</p>
@@ -23,10 +23,10 @@
 {% endblock %}
 
 {% block environment_configuration %}
-    <h4>Configuration Properties</h4>
+    <h2>Configuration Properties</h2>
 
     {% if configuration %}
-        <table class="table--top-aligned" data-tablesaw-mode="stack">
+        <table class="table--spacing-medium table--top-aligned" data-tablesaw-mode="stack">
             <thead>
                 <tr>
                     <th></th>
