--- a/templates/kraken/applications.twig
+++ b/templates/kraken/applications.twig
@@ -5,10 +5,10 @@
 {% block content %}
 
     <a href="{{ urlFor('kraken') }}" class="btn" style="position:absolute; right:20px;top:20px !important;">back</a>
-    <h2>Applications</h2>
+    <h1>Applications</h1>
 
     {% if applications %}
-        <table>
+        <table class="table--spacing-medium">
             <thead>
                 <tr>
                     <th>ID</th>
