--- a/templates/kraken/index.twig
+++ b/templates/kraken/index.twig
@@ -6,13 +6,13 @@
 
     <h1>Kraken</h1>
 
-    <ul>
+    <ul class="list--bullet">
         <li><a href="{{ urlFor('kraken.applications') }}">Applications</a></li>
         <li><a href="{{ urlFor('kraken.environments') }}">Environments</a></li>
     </ul>
 
     {% for item in test %}
-        <pre>{{ item|json_encode(constant('JSON_PRETTY_PRINT')) }}</pre>
+        <pre class="leader">{{ item|json_encode(constant('JSON_PRETTY_PRINT')) }}</pre>
     {% endfor %}
 
 {% endblock %}
