--- a/templates/kraken/application/add-target.twig
+++ b/templates/kraken/application/add-target.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <a href="{{ urlFor('kraken.application', {id: application.id}) }}" class="btn" style="position:absolute; right:20px;top:20px !important;">back</a>
+    <a href="{{ urlFor('kraken.application', {application: application.id}) }}" class="btn" style="position:absolute; right:20px;top:20px !important;">back</a>
     <h1>Assign Environment to Application</h1>
 
     <h4>Application ID</h4>
